WCuda/.metadata/.plugins/org.eclipse.cdt.ui/Farmwise_05_Consomateur_Weeds.build.log
14:38:19 **** Build of configuration MinGW for project Farmwise_05_Consomateur_Weeds ****
Info: Configuration "MinGW" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
makeMinGW.bat all 
init make
init API-EXT
init API-CBI
-----------------------------------------------

[MINGW] : all  

Set MinGW environement x64
 
g++ (x86_64-posix-seh-rev0, Built by MinGW-W64 project) 4.9.1
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

==================================================================================
[CBI] -> Target Name  : Farmwise_Consomateur_mingw_64
[CBI] ->
[CBI] -> Build     	  : Q:/cedric.bilat/Targets/Farmwise_Consomateur/bin/libFarmwise_Consomateur_mingw_64.a
[CBI] -> Deploy       : ../RELEASE/bin
[CBI] ->
[CBI] -> Type	 	  : STATIC_LIB
[CBI] -> Arch	 	  : 64
[CBI] -> OS	 		  : Win
[CBI] -> User	 	  : cedric.bilat
[CBI] ->
[CBI] -> Task		  : Compiling-Linking
==================================================================================

[CBI] -> SRC AUX (Recursif) :
[CBI] ->
[CBI] ->              : ../Farmwise_01_Specification/src/cpp/hearc

[CBI] -> CXXFLAGS (Partial) :
[CBI] ->
[CBI] ->              : -O3
[CBI] ->              : -fgcse
[CBI] ->              : -fomit-frame-pointer
[CBI] ->              : -fopenmp
[CBI] ->              : -frerun-loop-opt
[CBI] ->              : -march=native
[CBI] ->              : -std=c++0x


[CBI] -> INC_PATH (auto detect):
[CBI] ->              : ../Farmwise_01_Specification/src/cpp/hearc/specification/01_image/
[CBI] ->              : ../Farmwise_01_Specification/src/cpp/hearc/specification/02_weeds_finder/
[CBI] ->              : ../Farmwise_01_Specification/src/cpp/hearc/specification/02_weeds_finder/io/Output/
[CBI] ->              : ../Farmwise_01_Specification/src/cpp/hearc/specification/02_weeds_finder/io/input/
[CBI] ->              : ../Farmwise_01_Specification/src/cpp/hearc/specification/03_weeds_consomateur/
[CBI] ->              : src/cpp/hearc/destroyeur/facade/
[CBI] ->              : src/cpp/hearc/destroyeur/implementation/
[CBI] ->              : src/cpp/hearc/shower/facade/
[CBI] ->              : src/cpp/hearc/shower/implementation/

[CBI] -> LIB_PATH (auto detect):

[CBI] -> API_INC :
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/include
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/include/opencv2
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/include/opencv2/core
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/include/opencv2/flann
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/include/opencv2/highgui
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/include/opencv2/imgproc
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/include/opencv2/video

[CBI] -> API_LIB :
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/x64/mingw/lib

[CBI] -> API_BIN :
[CBI] ->              : c:/Soft_API/ext/OpenCV/001/build/x64/mingw/bin

[CBI] -> API_LIBRARIES :
[CBI] ->              : opencv_contrib249
[CBI] ->              : opencv_core249
[CBI] ->              : opencv_features2d249
[CBI] ->              : opencv_flann249
[CBI] ->              : opencv_highgui249
[CBI] ->              : opencv_imgproc249
[CBI] ->              : opencv_legacy249
[CBI] ->              : opencv_ml249
[CBI] ->              : opencv_nonfree249
[CBI] ->              : opencv_objdetect249
[CBI] ->              : opencv_ocl249
[CBI] ->              : opencv_photo249
[CBI] ->              : opencv_stitching249
[CBI] ->              : opencv_superres249
[CBI] ->              : opencv_ts249
[CBI] ->              : opencv_video249
[CBI] ->              : opencv_videostab249


[Farmwise_Consomateur_mingw_64] -> g++ compiling .cpp : src/cpp/hearc/destroyeur/facade/FactoryWeedsDestroyeur.cpp
In file included from src/cpp/hearc/destroyeur/facade/FactoryWeedsDestroyeur.cpp:1:0:
src/cpp/hearc/destroyeur/implementation/WeedsDestroyeur.h:16:5: error: expected class-name before '{' token
     {
     ^
In file included from src/cpp/hearc/destroyeur/facade/../../destroyeur/facade/FactoryWeedsDestroyeur.h:4:0,
                 from src/cpp/hearc/destroyeur/facade/FactoryWeedsDestroyeur.cpp:2:
../Farmwise_01_Specification/src/cpp/hearc/specification/03_weeds_consomateur/FactoryWeedsConsomateur_I.h:19:10: error: 'WeedsConsomateur_I' does not name a type
  virtual WeedsConsomateur_I* create()=0;
          ^
src/cpp/hearc/destroyeur/facade/FactoryWeedsDestroyeur.cpp: In member function 'virtual Weeds_Consomateur_I* FactoryWeedsDestroyeur::create()':
src/cpp/hearc/destroyeur/facade/FactoryWeedsDestroyeur.cpp:16:16: error: expected type-specifier before 'WeedsDetroyeur'
     return new WeedsDetroyeur();
                ^
src/cpp/hearc/destroyeur/facade/FactoryWeedsDestroyeur.cpp:16:16: error: expected ';' before 'WeedsDetroyeur'
src/cpp/hearc/destroyeur/facade/FactoryWeedsDestroyeur.cpp:16:31: error: 'WeedsDetroyeur' was not declared in this scope
     return new WeedsDetroyeur();
                               ^
../BUILDER/makefile/private/cpp/cpp.mk:305: recipe for target `Q:/cedric.bilat/Targets/Farmwise_Consomateur/obj/FactoryWeedsDestroyeur.obj' failed
make: *** [Q:/cedric.bilat/Targets/Farmwise_Consomateur/obj/FactoryWeedsDestroyeur.obj] Error 1

14:38:21 Build Finished (took 2s.68ms)

